Fixed text wrapping behavior for long tweets

--- a/public/styles/show-tweet.css
+++ b/public/styles/show-tweet.css
@@ -35,6 +35,7 @@ article > header > div > img {
 article > p {
   display: flex;
   align-items: center;
+  word-break: break-all;
   width: 100%;
   height: 100px;
   margin: 0px 20px 0px 20px;
